updated image picker and video to have pre-defined note for dimensions

--- a/package.json
+++ b/package.json
@@ -32,6 +32,14 @@
             {
                 "language": "liquid",
                 "path": "./snippets/liquid.json"
+            },
+            {
+                "language": "json",
+                "path": "./snippets/json.json"
+            },
+            {
+                "language": "jsonc",
+                "path": "./snippets/json.json"
             }
         ]
     }
